FIX: -FIxed parallax effect on mobile and added a new background -Added blur to main

--- a/space-explorer/src/Pages/HomePage/index.module.scss
+++ b/space-explorer/src/Pages/HomePage/index.module.scss
@@ -92,6 +92,7 @@
 }
 .home-hero-section::before {
     content: "";
+    backdrop-filter: blur(5px);
     background-color: rgba(0, 0, 0, 0.47);
     width: 100%;
     height: 100%;
