--- a/space-explorer/src/styles/ResetCSS.scss
+++ b/space-explorer/src/styles/ResetCSS.scss
@@ -1,10 +1,8 @@
+/* Box sizing rules */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font: inherit;
 }
 
 /* Remove default margin */
@@ -29,15 +27,18 @@ ol[role="list"] {
   padding: 0;
 }
 
-/* Set core body defaults */
-
 /* Set core root defaults */
+
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
 body {
-  min-height: 100%; /* fall-back */
+  min-height: 100%;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  min-width: -webkit-fill-available;
-
+  background-color: #242424;
   background-image: url("../assets/space-explorer-deep-space-main-bgr.webp");
   background-position: center;
   background-attachment: fixed;
@@ -56,6 +57,26 @@ picture {
   max-width: 100%;
   display: block;
 }
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media screen and (max-width: 766px) {
+  body {
+    background-image: url("../assets/space-explorer-desktop-wallpaper-vertical-background-vertical-vertical-space.jpg");
+    background-position: center;
+    background-attachment: unset;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+}
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
     scroll-behavior: auto;
@@ -69,4 +90,29 @@ picture {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+a {
+  text-decoration: none;
+}
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: 1px;
+  scrollbar-color: #132f5b00 #460b0b00;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 1px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #132f5b;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 61, 153, 0.7);
+  border-radius: 6px;
+  border: 0px none #ffffff;
 }
