--- a/space-explorer/src/styles/index.scss
+++ b/space-explorer/src/styles/index.scss
@@ -8,14 +8,12 @@
   cursor: url("/cursor.png"), auto;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   min-width: 320px;
-  height: 100%;
   scroll-behavior: smooth;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -36,8 +34,8 @@
 }
 
 .main {
-  height: 100%;
   width: 100%;
+  height: 100%;
 
   .videoTag {
     width: 100%;
@@ -58,6 +56,8 @@
 }
 @media screen and (max-width: 766px) {
   .main {
+    position: fixed;
+    overflow-y: scroll;
     .videoTag {
       height: 200px;
     }
